--- a/Project5/index.html
+++ b/Project5/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>CSE4050 Class Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="modelData/kanbanApp.js"></script>
+    <script src="app/models/kanbanApp.js"></script>
   </head>
   <body>
       <div id="reactapp">
